# whisper-vtt

./: .gitignore  PLAN.md  PROGRESS.md  REPRODUCTION_GUIDE.md  TASKS.md  VISION.md  config.toml  pyproject.toml  requirements.txt  spike-quartz-tap.py
.agent/grill/: macos-port.md
scripts/: build.py  download_model.py  runtime_hook.py
src/: __main__.py  app_controller.py  audio_capture.py  config_manager.py  hotkey_listener.py  models.py  output_handler.py  paths.py  system_tray.py  transcription_engine.py  vad_engine.py  wake_word.py
src/backends/: __init__.py  base.py  macos.py  windows.py
tests/: test_app_controller.py  test_audio_capture.py  test_config_manager.py  test_hotkey_listener.py  test_models.py  test_output_handler.py  test_paths.py  test_system_tray.py  test_transcription_engine.py  test_vad_engine.py  test_wake_word.py
whisper_vtt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
